--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Package
       run: |
-        python -m pip install --upgrade setuptools setuptools_scm wheel
+        python -m pip install --upgrade "setuptools<72" setuptools_scm wheel
         python -m pip install .
     - name: Run Tests
       run: |
